--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,39 @@
     font-family: 'Roboto', sans-serif;
 }
 
-body {
+#showcase {
     background: var(--primary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+#showcase:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: url('../img/showcase.jpg') no-repeat center center/cover;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+}
+
+#showcase .showcase__container {
+    height: 100vh;
+    width: 960px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+#showcase .showcase__container h1 {
+    font-size: 4rem;
+}
+
+#showcase .showcase__container p {
+    font-size: 1.3rem;
+}
