--- a/css/menu.css
+++ b/css/menu.css
@@ -3,6 +3,119 @@
 }
 
 .menu__wrap .toggler {
+    position: absolute;
     height: 60px;
     width: 60px;
+    opacity: 0;
+    z-index: 10;
 }
+
+.menu__wrap .hamburger {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 60px;
+    width: 60px;
+    background: var(--primary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+}
+
+.menu__wrap .hamburger > div {
+    position: relative;
+    margin: 15px;
+    height: 2px;
+    width: 100%;
+    background: #fff;
+    transition: 0.5s ease;
+}
+
+.menu__wrap .hamburger > div:before,
+.menu__wrap .hamburger > div:after {
+    content: '';
+    position: absolute;
+    top: -10px;
+    width: 100%;
+    height: 2px;
+    background: inherit
+}
+
+.menu__wrap .hamburger > div:after {
+    top: 10px;
+}
+
+.menu__wrap .toggler:checked + .hamburger > div {
+    transform: rotate(135deg);
+}
+
+.menu__wrap .toggler:checked + .hamburger > div:before {
+    top: 0;
+    transform: rotate(275deg);
+}
+
+.menu__wrap .toggler:checked + .hamburger > div:after {
+    display: none;
+}
+
+.menu__wrap .menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    visibility: hidden;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.menu__wrap .menu > div {
+    background: var(--overlay-color);
+    width: 400vw;
+    height: 400vw;
+    flex: none;
+    transform: scale(0);
+    transition-duration: var(--menu-speed);
+    border-radius: 50%;
+}
+
+.menu__wrap .menu > div > div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+}
+
+.menu__wrap .menu > div > div > ul {
+    text-align: center;
+    list-style: none;
+}
+
+.menu__wrap .menu > div > div > ul > li {
+    padding: 10px; 
+}
+
+.menu__wrap .menu > div > div > ul > li > a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.5rem;
+}
+
+.menu__wrap .menu > div > div > ul > li > a:hover {
+    color: var(--secondary-color);
+}
+
+.menu__wrap .toggler:checked ~ .menu {
+    visibility: visible;
+    
+}
+
+.menu__wrap .toggler:checked ~ .menu > div {
+    transform: scale(1);
+    transition-duration: var(--menu-speed);
+}
+
