--- a/css/style.css
+++ b/css/style.css
@@ -50,3 +50,17 @@
 #showcase .showcase__container p {
     font-size: 1.3rem;
 }
+
+.btn {
+    background: var(--primary-color);
+    padding: 1rem 1.2rem;
+    margin-top: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    outline: none;
+    transition: all .5s ease;
+}
+
+.btn:hover {
+    opacity: 0.7;
+}
